update logo, favicon

--- a/src/app/cart/cart.page.html
+++ b/src/app/cart/cart.page.html
@@ -35,7 +35,7 @@
               </ng-container>
 
               <ng-container *ngIf="!item.product || !item.product.productTempImage || !item.product.productTempImage[0]">
-                <img src="assets/logo2.svg">
+                <img src="assets/logo.svg">
               </ng-container>
 
               <ion-text color="danger" class="small" (click)="remove(item, j)">Xoá</ion-text>
