--- a/src/app/signup/signup.page.html
+++ b/src/app/signup/signup.page.html
@@ -1,6 +1,6 @@
 <ion-header color="mytheme" class="head ion-padding">
     <ion-row class="ion-justify-content-center">
-      <ion-img style="margin: 10%;" src="assets/logo2.svg" class="head-image"></ion-img>
+      <ion-img style="margin: 10%;" src="assets/logo.svg" class="head-image"></ion-img>
     </ion-row>
   </ion-header>
   
