--- a/src/app/productlist/productlist.page.html
+++ b/src/app/productlist/productlist.page.html
@@ -13,7 +13,7 @@
       </ng-container>
 
       <ng-container *ngIf="!(data.productTempImage && data.productTempImage[0])">
-        <img src="assets/logo2.svg">
+        <img src="assets/logo.svg">
       </ng-container>
 
       <ion-card-content style="padding-left: 7px;">
