--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -553,13 +553,21 @@
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
 
-  /** mytheme **/
-  --ion-color-mytheme: #31B1F0;
-  --ion-color-mytheme-rgb: 49,177,240;
-  --ion-color-mytheme-contrast: #000000;
-  --ion-color-mytheme-contrast-rgb: 0,0,0;
-  --ion-color-mytheme-shade: #2b9cd3;
-  --ion-color-mytheme-tint: #46b9f2;
+  // /** mytheme **/
+  // --ion-color-mytheme: #31B1F0;
+  // --ion-color-mytheme-rgb: 49,177,240;
+  // --ion-color-mytheme-contrast: #000000;
+  // --ion-color-mytheme-contrast-rgb: 0,0,0;
+  // --ion-color-mytheme-shade: #2b9cd3;
+  // --ion-color-mytheme-tint: #46b9f2;
+
+    /** mytheme **/
+    --ion-color-mytheme: #44a2f4;
+    --ion-color-mytheme-rgb: 49,177,240;
+    --ion-color-mytheme-contrast: #000000;
+    --ion-color-mytheme-contrast-rgb: 0,0,0;
+    --ion-color-mytheme-shade: #2b9cd3;
+    --ion-color-mytheme-tint: #46b9f2;
 
   /** facebook **/
   --ion-color-fb: #3b5998;
