--- a/src/app/search/search.page.scss
+++ b/src/app/search/search.page.scss
@@ -1,5 +1,5 @@
 .search-bar {
-    background-color: rgba(240, 240, 240, .5);
+    background-color: rgba(253, 253, 253, 0.9);
     border-radius: 3px;
     font-size: .9em !important;
     margin: 5px;
