--- a/src/global.scss
+++ b/src/global.scss
@@ -13,8 +13,9 @@
 
 /* custom font */
 @import url("https://fonts.googleapis.com/css?family=Muli:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i");
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 * {
-  font-family: "Muli", sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 .line {
   width: 75%;
