--- a/src/app/core/components/string-field/string-field.component.html
+++ b/src/app/core/components/string-field/string-field.component.html
@@ -1,5 +1,6 @@
 <ion-row>
   <ion-col>
+    <div *ngIf="overlay" class="input-overlay" (click)="onClickInput()"></div>
     <ion-input 
     [class]="inputClass"
     [disabled]="disabled"
