--- a/src/app/core/components/string-field/string-field.component.scss
+++ b/src/app/core/components/string-field/string-field.component.scss
@@ -8,3 +8,12 @@
 .native-input:disabled{
   opacity: initial !important;
 }
+.input-overlay {
+  width: 100%;
+  height: 100%;            
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  z-index: 9;
+}
