Fix break line desc product detail

--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -122,7 +122,7 @@
           <ion-col size="8">{{attribute.value[0].name}}</ion-col>
         </ion-row>
       </ion-row>
-      <div [innerHTML]="product.description"></div>
+      <div style="white-space: pre-line;" [innerHTML]="product.description"></div>
       <!-- <ion-row class="full info" (click)="toogle(2)">
         <ion-col size="9">
           <strong class="ion-float-left">Buyer Guarantee</strong>
