--- a/src/app/productlist/productlist.page.scss
+++ b/src/app/productlist/productlist.page.scss
@@ -24,3 +24,10 @@
     background-color: rgba(12, 12, 12, .75);
     border-radius: 0;
 }
+.product-name {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
