--- a/src/app/checkout/checkout.page.html
+++ b/src/app/checkout/checkout.page.html
@@ -177,7 +177,7 @@
   </ion-list> -->
 </ion-content>
 <ion-footer (click)="done()">
-  <ion-toolbar style="height: 48px;" color="success">
-    <ion-title>Hoàn thành</ion-title>
+  <ion-toolbar style="height: 48px;" color="mytheme">
+    <ion-title color="light">Hoàn thành</ion-title>
   </ion-toolbar>
 </ion-footer>
