update info page

--- a/src/app/info-app/info-app.page.html
+++ b/src/app/info-app/info-app.page.html
@@ -1,6 +1,6 @@
 <ion-header class="main-header main-header--no-border">
   <ion-toolbar mode="ios">
-      <ion-title>Thông tin về Tii</ion-title>
+      <ion-title>Thông tin về Harumart</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -15,7 +15,7 @@
     <ion-grid style="margin-left: 10px;">
       <ion-row style="padding: 5px; font-size: 16px;">
         <ion-col class="ion-no-padding">
-          <ion-text class="ion-text-left"><span class="price">1. Email: <strong>tii24h@gmail.com</strong></span></ion-text>
+          <ion-text class="ion-text-left"><span class="price">1. Email: <strong>cskh.harumart@gmail.com</strong></span></ion-text>
         </ion-col>
       </ion-row>
       <ion-row style="padding: 5px; font-size: 16px;">
