--- a/src/app/core/components/order-item/order-item.component.scss
+++ b/src/app/core/components/order-item/order-item.component.scss
@@ -1,72 +1,89 @@
 :host {
-    display: block;
-  }
-  
-  .order-item {
-    padding: 12px 0px;
-    box-shadow: none;
-    color: #000000;
+  display: block;
+}
+
+.order-item {
+  padding: 12px 0px;
+  box-shadow: none;
+  color: #000000;
+  margin: 0px;
+  background: inherit;
+
+  ion-label {
     margin: 0px;
-    background: inherit;
-  
-    ion-label {
-      margin: 0px;
-    }
-  
-    ion-avatar {
-      border-radius: 0;
-    }
-    &__name {
-      font-size: 14px;
-    }
-  
-    &__price {
-      font-size: 12px;
-      margin-top: 5px;
-    }
-  
-    &__price {
-      font-size: 16px;
-      // font-weight: bold;
-      display: flex;
-    }
-  
-    &__shipping {
-      font-size: 12px;
-      margin-top: 5px;
-    }
-  
-    &__header {
-      padding-left: 16px;
-      padding-right: 16px;
-      padding-bottom: 16px;
-    }
-  
-    &__code {
-      flex: 1;
-      font-weight: 600;
-    }
-  
-    &__status {
-      font-size: 14px;
-      display: flex;
-      align-items: center;
-    }
-  }
-  ion-item {
-    --background: transparent;
-    ion-avatar {
-      width: 20%;
-      height: auto;
-      border-radius: 0px;
-      --border-radius: 0px;
-    }
-    &:not(:last-of-type) {
-      margin-bottom: 16px;
-    }
   }
 
-  .order-item__name {
-    white-space: initial;
+  ion-avatar {
+    border-radius: 0;
+  }
+
+  &__name {
+    font-size: 14px;
+  }
+
+  &__price {
+    font-size: 12px;
+    margin-top: 5px;
+  }
+
+  &__price {
+    font-size: 16px;
+    // font-weight: bold;
+    display: flex;
+  }
+
+  &__shipping {
+    font-size: 12px;
+    margin-top: 5px;
+  }
+
+  &__header {
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-bottom: 16px;
+  }
+
+  &__code {
+    flex: 1;
+    font-weight: 600;
+  }
+
+  &__status {
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+  }
+}
+
+ion-item {
+  --background: transparent;
+
+  ion-avatar {
+    width: 20%;
+    height: auto;
+    border-radius: 0px;
+    --border-radius: 0px;
+  }
+
+  &:not(:last-of-type) {
+    margin-bottom: 16px;
+  }
+}
+
+.order-item__name {
+  white-space: initial;
+}
+
+::ng-deep {
+  ion-modal#state-modal {
+    --width: 80%;
+    --min-width: 250px;
+    --height: fit-content;
+    --border-radius: 6px;
+    --box-shadow: 0 28px 48px rgba(0, 0, 0, 0.4);
   }
   
+  ion-modal#modal .wrapper {
+    margin-bottom: 10px;
+  }
+}
