add border radius banner

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -59,8 +59,10 @@ ion-slides {
 .slide-banner {
     padding: 0 5px;
     width: 100%;
+    border-radius: 9px;
     img {
         width: 100%;
+        border-radius: 9px;
     }
 }
 
