--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -27,20 +27,35 @@
 
   <app-spinner *ngIf="isLoading"></app-spinner>
 
+  <ion-text class="ion-text-center" color="primary">
+    <h6>Sản Phẩm Nổi Bật!</h6>
+  </ion-text>
   <ion-slides pager="true" [options]="slideOpts" (ionSlideDidChange)="change()" (click)="preventDefault($event)" #Slides>
-    <ion-slide>
-      <div class="slide-banner">
-        <img src="assets/images/banner-web-01a.jpg" alt="">
+    <ion-slide *ngFor="let banner of banners">
+      <div class="slide-banner" (click)="goToOutstandingProductsPage(banner)">
+        <img [src]="banner.image" alt="">
       </div>
     </ion-slide>
-    <ion-slide>
-      <div class="slide-banner">
-        <img src="assets/images/banner-web-02a.jpg" alt="">
-      </div>
-    </ion-slide>
-    <ion-slide>
-      <div class="slide-banner">
-        <img src="assets/images/banner-web-03a.jpg" alt="">
+  </ion-slides>
+  <ion-text class="ion-text-center" color="primary">
+    <h6>Voucher</h6>
+  </ion-text>
+  <ion-slides pager="true" [options]="slideVouchers" (click)="preventDefault($event)">
+    <ion-slide class="voucher-slide" *ngFor="let voucher of vouchers">
+      <div class="card-voucher">
+        <div class="card-voucher-icon">
+          <img src="assets/logo.svg" alt="">
+        </div>
+        <div class="card-voucher-content">
+          <div>
+            <div class="card-voucher-content-title">{{voucher.name}}</div>
+          <div class="card-voucher-content-code">{{voucher.code}}</div>
+          </div>
+          <div class="card-voucher-content-bottom">
+            <div class="card-voucher-content-bottom-date">{{utilService.convertStringToDate(voucher.expiredDate)}}</div>
+            <ion-button shape="round" size="small">Lưu</ion-button>
+          </div>
+        </div>
       </div>
     </ion-slide>
   </ion-slides>
