--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -13,14 +13,14 @@
       </ion-button> -->
     </ion-buttons>
   </ion-toolbar>
-  <ion-toolbar color="mytheme" class="segmenttoolbarSection">
+  <!-- <ion-toolbar color="mytheme" class="segmenttoolbarSection">
       <ion-segment mode="md"  (ionChange)="seg($event)" scrollable="true" id="dag" class="segSection">
         <ion-segment-button   [attr.id]="'seg_' + i" *ngFor="let item of data; let i = index;" class="ion-no-margin ion-no-padding" (ionSelect)="update(i)"
           class="my-btn" [value]="item.title" [ngClass]="{'btn-active':segment === item.title}">
           <ion-text class="text ion-padding-horizontal">{{item.title}}</ion-text>
         </ion-segment-button>
       </ion-segment>
-  </ion-toolbar>
+  </ion-toolbar> -->
 </ion-header>
 
 <ion-content padding color="light">
