--- a/src/app/product/product.component.scss
+++ b/src/app/product/product.component.scss
@@ -119,3 +119,37 @@
     width: 100%;
     display: block;
 }
+.radio-toolbar {
+    margin: 5px;
+}
+
+.radio-toolbar input[type="radio"] {
+    opacity: 0;
+    position: fixed;
+    width: 0;
+}
+
+.radio-toolbar label {
+    display: inline-block;
+    margin-right: 10px;
+    background-color: #fff;
+    padding: 5px 15px;
+    font-family: sans-serif, Arial;
+    font-size: 16px;
+    border: 1px solid #444;
+    border-radius: 4px;
+}
+
+.radio-toolbar label:hover {
+    background-color: #dfd;
+}
+
+.radio-toolbar input[type="radio"]:focus+label {
+    //   border: 2px dashed #444;
+}
+
+.radio-toolbar input[type="radio"]:checked+label {
+    background-color: #c6e0f7;
+    color: #44a2f4;
+    border-color: #44a2f4;
+}
