add info address and bank account when signup

--- a/src/app/signup/signup.page.html
+++ b/src/app/signup/signup.page.html
@@ -38,6 +38,18 @@
           </ion-col>
         </ion-row>
 
+        <ion-row>
+          <ion-col>
+            <ion-input clearInput placeholder="Địa chỉ" formControlName="address" class="input ion-padding-horizontal"></ion-input>
+          </ion-col>
+        </ion-row>
+
+        <ion-row>
+          <ion-col>
+            <ion-input clearInput placeholder="Tài khoản ngân hàng" formControlName="accountNumber" class="input ion-padding-horizontal"></ion-input>
+          </ion-col>
+        </ion-row>
+
         <div formGroupName="matchingPasswords">
           <ion-row>
             <ion-col>
